# rag-image

./: .gitignore  DEPLOYMENT.md  Dockerfile  QUICK_SETUP.md  README.md  __init__.py  cli.py  docker-compose.yml  gemini_api_key.json  main_ui.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yml
extracted_from_pdf/extracted_content/: Acrobat_DC.md
frontend/: __init__.py  streamlit_app.py
pdf_rag_with_image/: __init__.py  index_builder.py  llm_client.py  pdf_processor.py  rag_system.py
